<resources>
    <string name="app_name">MyCinema</string>
    <string name="popular_tab">popular</string>
    <string name="in_theaters_tab">in theaters</string>
    <string name="upcoming_tab">upcoming</string>
    <string name="top_rated_tab">top rated</string>
    <string name="airing_today">airing today</string>
    <string name="on_the_air">on the air</string>
    <string name="empty_string"/>
    <string name="movies_activity_title">Movies</string>
    <string name="tv_activity_title">TV Shows</string>
    <string name="like_card_action">Like</string>
    <string name="add_card_action">Add</string>
    <string name="movies_nav_item">Movies</string>
    <string name="tv_shows_nav_item">TV Shows</string>
    <string name="people_nav_item">People</string>
    <string name="favorites_nav_item">Favorites</string>
    <string name="my_lists_nav_item">My Lists</string>
    <string name="settings_nav_group">Settings</string>
    <string name="account_nav_item">Account</string>
    <string name="advanced_nav_item">Advanced</string>
    <string name="search_appbar_action">Search</string>
    <string name="filter_appbar_action">Filter</string>
    <string name="read_more">Read More</string>
    <string name="release_date">Release Date</string>
    <string name="trailers">Trailers</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>

    <string-array name="movie_genres">
        <item>Genre 1</item>
        <item>Genre 2</item>
        <item>Genre 3</item>
        <item>Genre 4</item>
        <item>Genre 5</item>
        <item>Genre 6</item>
        <item>Genre 7</item>
        <item>Genre 8</item>
        <item>Genre 9</item>
        <item>Genre 10</item>
    </string-array>
</resources>
