<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/movies_navigation_menu_item"
            android:icon="@drawable/ic_movie"
            android:title="@string/movies_nav_item" />
        <item
            android:id="@+id/tv_shows_navigation_menu_item"
            android:icon="@drawable/ic_live_tv"
            android:title="@string/tv_shows_nav_item" />
        <item
            android:id="@+id/people_navigation_menu_item"
            android:icon="@drawable/ic_people"
            android:title="@string/people_nav_item" />
        <item
            android:id="@+id/favourites_navigation_menu_item"
            android:icon="@drawable/ic_stars"
            android:title="@string/favorites_nav_item" />
        <item
            android:id="@+id/my_lists_navigation_menu_item"
            android:icon="@drawable/ic_folder_shared"
            android:title="@string/my_lists_nav_item" />
    </group>

    <item android:title="@string/settings_nav_group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/account_navigation_menu_item"
                    android:icon="@drawable/ic_account_box"
                    android:title="@string/account_nav_item" />
                <item
                    android:id="@+id/advanced_navigation_menu_item"
                    android:icon="@drawable/ic_build"
                    android:title="@string/advanced_nav_item" />
            </group>
        </menu>
    </item>
</menu>